--- a/main.html
+++ b/main.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curso HTML y CSS</title>
+    <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Ejercicio de maquetación con HTML5 y CSS">
+    <meta name="author" content="Sebatian Mora">
+    <link rel="shortcut icon" type="img/f1logo" href="img/f1logo.png">
 </head>
 <body>
-    
+    <!-- cabecera del documento -->
+    <header><img src="img/f1logo.png" alt=""></header>
+
+    <!-- barra de navegacion -->
+    <nav>
+        <a href="#">Enlace 1</a>
+        <a href="#">Enlace 2</a>
+        <a href="#">Enlace 3</a>
+        <a href="#">Enlace 4</a>
+        <a href="#">Enlace 5</a>
+    </nav>
+
+    <!-- contenido principal de la pagina -->
+    <section>
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias repellendus laborum itaque optio totam? Necessitatibus magnam quas magni consectetur quisquam dolore, nihil qui velit placeat in illo, similique enim dignissimos.</p>
+        </article>
+        <article>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa, odit ab officiis cumque ducimus, deleniti ipsum cum autem vitae, molestias ex. Enim est sit nihil? Pariatur non itaque deleniti aperiam!
+        </article>
+    </section>
+
+    <!-- contenido externo con la pagina -->
+    <aside>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque harum rerum iste minima autem nobis natus quas reprehenderit, similique commodi, eos, vero minus! Ratione alias vitae, reprehenderit error nisi dolores. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque eum vero odio in voluptas, nisi quo dolorem corporis debitis quaerat praesentium cumque adipisci reiciendis nemo laborum ab molestiae modi. Voluptatum!</p>
+    </aside>
+
+    <!-- pie de pagina -->
+    <footer>
+        <p>Copyright</p>
+    </footer>
 </body>
 </html>
