--- a/main.html
+++ b/main.html
@@ -15,11 +15,11 @@
 
     <!-- barra de navegacion -->
     <nav>
-        <a href="#">Enlace 1</a>
-        <a href="#">Enlace 2</a>
-        <a href="#">Enlace 3</a>
-        <a href="#">Enlace 4</a>
-        <a href="#">Enlace 5</a>
+        <a href="https://www.youtube.com/watch?v=VDVZs_oQYGs">Mariachi Theme</a>
+        <a href="https://www.youtube.com/watch?v=PtRf6VS15oM">Highlights Mexico</a>
+        <a href="https://www.youtube.com/@Formula1">Formula 1</a>
+        <a href="https://f1tv.formula1.com/page/6603/2023-season">F1 TV</a>
+        <a href="https://www.formula1.com/en/racing/2023.html">F1 Schedule 2023</a>
     </nav>
 
     <!-- contenido principal de la pagina -->
